@@ -264,6 +264,8 @@
     <br/>
     You can move notes <b>one octave up or down</b> by using <b>shift + up/down</b> keys, and to the <b>next or previous measure</b>
     with <b>shift + left/right</b> keys.
+    <br/><br/>
+    You may also <b>duplicate</b> notes by <b>dragging them while holding down control</b> (or <b>command</b> for OSX users).
 </p>
 
 <p>
