@@ -1,4 +1,5 @@
 1.3 beta 4
+- Added ability to drag-duplicate notes
 - Fixed accidentals in score editor working over all octaves
 - Fixed incorrect ledger lines in score view and score printing
 - Move playback timer to the status bar where it is less intrusive
@@ -7,7 +8,7 @@
 - Fixed potential crash when editing song while recording is activated
 - Allow entering raw controller values
 - Fixed some potential crashes that could occur if you do weird stuff while recording
-- Fixed bug in printing that could result in overlap
+- Fixed several bugs in printing
 - Other minor improvements to printing
 
 1.3 beta 3
